feat(#92): add java formatter