@@ -62,8 +62,8 @@ SOFTWARE.
   </developers>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>8</maven.compiler.source>
-    <maven.compiler.target>8</maven.compiler.target>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
     <antlr.version>4.13.2</antlr.version>
   </properties>
   <dependencies>
@@ -73,15 +73,15 @@ SOFTWARE.
       <version>0.56.1</version>
     </dependency>
     <dependency>
-        <groupId>com.jcabi</groupId>
-        <artifactId>jcabi-log</artifactId>
-        <version>0.24.3</version>
-      </dependency>
-       <dependency>
-              <groupId>org.slf4j</groupId>
-              <artifactId>slf4j-simple</artifactId>
-              <version>2.0.16</version>
-          </dependency>
+      <groupId>com.jcabi</groupId>
+      <artifactId>jcabi-log</artifactId>
+      <version>0.24.3</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <version>2.0.16</version>
+    </dependency>
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
@@ -102,6 +102,11 @@ SOFTWARE.
       <groupId>org.antlr</groupId>
       <artifactId>antlr4-runtime</artifactId>
       <version>${antlr.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.googlejavaformat</groupId>
+      <artifactId>google-java-format</artifactId>
+      <version>1.25.0</version>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
@@ -131,12 +136,27 @@ SOFTWARE.
   <build>
     <plugins>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.13.0</version>
+        <configuration>
+          <compilerArgs>
+            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+          </compilerArgs>
+        </configuration>
+      </plugin>
+      <plugin>
         <groupId>org.antlr</groupId>
         <artifactId>antlr4-maven-plugin</artifactId>
         <version>${antlr.version}</version>
         <configuration>
-        <libDirectory>${basedir}/src/main/antlr4/com/github/lombrozo/jsmith</libDirectory>
-</configuration>
+          <libDirectory>${basedir}/src/main/antlr4/com/github/lombrozo/jsmith</libDirectory>
+        </configuration>
         <executions>
           <execution>
             <id>antlr</id>
@@ -151,6 +171,16 @@ SOFTWARE.
         <artifactId>maven-surefire-plugin</artifactId>
         <!-- JUnit 5 requires Surefire version 2.22.0 or higher -->
         <version>3.5.2</version>
+        <configuration>
+          <argLine>
+                                --add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
+                                --add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
+                                --add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
+                                --add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
+                                --add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
+                                --add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+                            </argLine>
+        </configuration>
       </plugin>
     </plugins>
   </build>
